--- a/Develloppeurs.html
+++ b/Develloppeurs.html
@@ -56,7 +56,7 @@
     <br>
     <br>
     <a href="https://www.blizzard.com/fr-fr/" target="_blank">
-    <img class="image_editeur" src="./Images/logo-blizzard.webp" alt="Logo de Blizzard Entertainment">
+    <img class="image_editeur" src="./Images/logo-blizzard.png" alt="Logo de Blizzard Entertainment">
   </a>
 </p>
   <p class="a_propos"><b>Bandai Namco</b>
@@ -76,7 +76,7 @@
     <br>
     <br>
     <a href="https://account.mojang.com/" target="_blank">
-    <img class="image_editeur" src="./Images/Mojang_logo.png" alt="Logo de Mojang Studios">
+    <img class="image_editeur" src="./Images/mojang.png" alt="Logo de Mojang Studios">
   </a>
 </p>
 <footer>
