--- a/Genres.html
+++ b/Genres.html
@@ -19,7 +19,7 @@
       <p class="introduction">Dans cette page, je vais vous parler de plusieurs genres de jeux-vidéos ainsi que de l'un de leur jeu phare.
       <br>
       </p>
-      <p class="a_propos"><b>Battle Royale :</b>
+      <p class="a_propos"><span class="sous_titre">Battle Royale</span>
       <br>
       <br>
       Le Battle Royale est un mode de jeu dans lequel les joueurs atterissent sur une carte avec 99 autres joueurs. <br>
@@ -31,7 +31,7 @@
       <br>
       <br>
       Le jeu reprend le principe des jeux battle royale dont l'objectif est d'être le dernier survivant, peu importe le moyen, en éliminant les joueurs adverses ou en se cachant. Au début de chaque partie, les joueurs attendent tous dans un bus volant qui survole l'île, puis ils choisissent un point d’atterrissage à l’aide de la carte de jeu. Les joueurs s'engagent ensuite dans la quête d'armes, d'objets (soins, grenades, pièges). Dans le même temps, les joueurs peuvent commencer à aller se battre, ou rester cachés, suivant leur stratégie. Le but du jeu étant d'atteindre le "top 1", être le dernier survivant de la partie.
-      <p class="a_propos"><b>FPS</b>
+      <p class="a_propos"><span class="sous_titre">FPS</span>
       <br>
       <br>
       Le jeu de tir à la première personne (en anglais FPS pour First-person shooter) ou en vue subjective, aussi appelé Doom-like est un genre de jeu vidéo de tir fondé sur des combats en vision subjective (« à la première personne »), c'est-à-dire que le joueur voit l'action à travers les yeux du protagoniste.<br>
@@ -43,7 +43,7 @@
       <br>
       Le jeu se déroule dans un futur sombre et pessimiste où une succession de crises a provoqué la faillite de nombreux Etats et un flot massif de réfugiés surnommés les "Sans-Patrie" (No-Pats en version originale). Ces derniers deviennent des mercenaires (appelés "forces opérationnelles") pour se battre avec l'une des deux dernières superpuissances mondiales : les États-Unis ou la Russie (qui représentent les deux factions jouables du jeu).
       <br>
-      <p class="a_propos"><b>RPG</b>
+      <p class="a_propos"><span class="sous_titre">RPG</span>
       <br>
       <br>
       Le RPG (Role Playing Game), veut <i>dire jeu de rôle</i> en français. Dans un RPG, le joueur incarne un personnage qu'il pourra faire évoluer avec une certaine liberté au cours du temps, grâce à différents combats et quêtes, motivé par l'envie d'explorer et le sens de l'aventure.<br>
@@ -54,7 +54,7 @@
       <br>
       <br>
       Breath of the Wild propose d'incarner Link, un héros hylien de Hyrule, amnésique, réveillé après un long sommeil d'une centaine d'années par une mystérieuse voix qui le guide afin d'éliminer Ganon, « Le Fléau », et restaurer la paix dans le royaume d'Hyrule. À l'instar du premier jeu de la série sorti en 1986, le joueur reçoit peu d'instructions et peut librement explorer un univers en monde ouvert, en résolvant différentes quêtes, sanctuaires et énigmes, en plus de la tâche principale. Lors de son aventure, il découvrira que la voix qui l'a réveillé était celle de sa dulciné, la princesse de Hyrule : <b>Zelda</b>.
-      <p class="a_propos"><b>MMO</b>
+      <p class="a_propos"><span class="sous_titre">MMO</span>
       <br>
       <br>
       Le jeu en ligne massivement multijoueur (ou MMO) est un genre de jeu vidéo faisant participer un très grand nombre de joueurs simultanément par le biais d'un réseau informatique ayant accès à Internet.
@@ -68,7 +68,7 @@
       <br>
       Si vous vous placez du coté de L'alliance, vous pourrez choisir les classes suivantes : Les Draeneï, les Elfes de La Nuit, les Gnomes, les Humains, les Naïns, les Pandarens et les Worgens.<br>
       Si vous vous placez du coté de La Horde, vous pourrez choisir les classes suivantes : Les Elfes de Sang, les Gobelins, les Morts-Vivants, les Orcs, les Taurens, les Trolls et les Pandarens.
-      <p class="a_propos"><b>Jeu de combat</b>
+      <p class="a_propos"><span class="sous_titre">Jeu de combat</span>
       <br>
       <br>
       Le jeu de combat (ou fighting game), parfois appelé abusivement en France <i>VS fighting</i> (pour versus fighting) ou plus familièrement Jeu de baston, est un genre de jeu vidéo opposant un nombre limité de personnages (deux le plus souvent).<br>
@@ -79,18 +79,18 @@
       <br>
       <br>
       Dans Tekken 7, deux combattants s'affrontent dans un environnement 3D destructible (limité à certains murs et sols). Le but est de réduire la barre de santé de l'adversaire à 0 en lui assénant des coups. Le jeu attribue une touche à chaque bras et jambe du personnage. Il est alors possible de créer des enchaînements de plusieurs coups en essayant de les combiner, créant ainsi des combos. Chaque personnage a également la possibilité d'envoyer son adversaire dans les airs et ainsi l'enchaîner sans que celui-ci ne puisse riposter.
-      <p class="a_propos"><b>Bac a sable</b>
+      <p class="a_propos"><span class="sous_titre">Bac à sable</span>
       <br>
       <br>
       Un jeu bac a sable (ou sandbox en anglais) n'a pas forcement d'objectif prédéterminé par le concepteur du jeu. Le joueur est libre d'accomplir les objectifs définis par les développeurs du jeu ou lui même a l'aide d'un panel d'outils permettant de modifier le contenu, parfois de manière permanente.<br>
       L'un des jeux bac a sable le plus connu est <b>Minecraft</b>, dévellopé par Mojang et racheté par Microsoft :
       <br>
       <br>
-      <img class="image_de_jeu" src="./Images/minecraft.jpg" alt="image promotionnelle 2021 du jeu Minecraft">
+      <img class="image_de_jeu" src="./Images/minecraft.jpeg" alt="image promotionnelle 2021 du jeu Minecraft">
       <br>
       <br>
       Minecraft est un jeu vidéo de type aventure « bac à sable » (construction complètement libre) développé par le Suédois Markus Persson, alias Notch, puis par la société Mojang Studios. Il s'agit d'un univers composé de voxels et généré de façon procédurale, qui intègre un système d'artisanat axé sur l'exploitation puis la transformation de ressources naturelles (minéralogiques, fossiles, animales et végétales).
-      <p class="a_propos"><b>Simulation</b>
+      <p class="a_propos"><span class="sous_titre">Simulation</span>
       <br>
       <br>
       Les jeux dits de "simulation" sont des jeux vidéos qui visent à simuler la réalité, représentant virtuellement une activité humaine ou le fonctionnement d'une machine, et dans lequel le joueur a l'impression d'être physiquement impliqué dans l'activité représentée à l'écran. <br>
