--- a/Contact.html
+++ b/Contact.html
@@ -20,7 +20,7 @@
       </p>
 
       <p class="Réseaux">
-      <b>Réseaux</b>
+      <span class="sous_titre">Réseaux</span>
         <br>
         <br>
         Twitter
@@ -46,7 +46,7 @@
       <img class="Contact" src="./Images/FacebookLogo.jpeg" alt="Facebook">
     </a>
   </p>
-        <p class="Contact_Mail_Tel">Messagerie : <br>
+        <p class="Contact_Mail_Tel"><span class="sous_titre">Messagerie :</span><br>
         <br>
           Me Contacter par mail à <b>renuccipro@gmail.com</b>.<br>
           <br>
