--- a/Develloppeurs.html
+++ b/Develloppeurs.html
@@ -19,7 +19,7 @@
     <p class="introduction">Dans cette page, vous allez pouvoir retrouver des courts résumés sur les dévelloppeurs mentionnés dans la page <a href="Genres.html">Genres</a> avec une liste de jeux édités par ceux-ci.
       <br>
     </p>
-    <p class="a_propos"><b>Epic Games</b>
+    <p class="a_propos"><span class="sous_titre">Epic Games</span>
       <br>
       <br>
       Fondé en 1991 et basé à Cary, Caroline du Nord, Epic Games a créé les jeux <a href="https://www.epicgames.com/fortnite/fr/home" target="_blank">Fortnite</a>, <a href="https://www.unrealengine.com/en-US/unreal-engine-5" target="_blank">Unreal</a>, <a href="https://gearsofwar.com/fr-fr/" target="_blank">Gears of War</a>, <a href="https://www.gamekult.com/jeux/shadow-complex-3050592805.html" target="_blank">Shadow Complex</a> et <a href="https://www.epicgames.com/infinityblade/en-US/home" target="_blank">Infinity Blade</a>. La technologie Unreal Engine d'Epic permet la création d'expériences interactives réalistes sur PC, console et mobile, mais aussi en réalité alternative, en réalité virtuelle et sur Internet.
@@ -29,7 +29,7 @@
       <img class="image_editeur" src="./Images/Epic_Games_logo.png" alt="Logo de l'éditeur EpicGames">
     </a>
   </p>
-  <p class="a_propos"><b>Electronics Arts</b>
+  <p class="a_propos"><span class="sous_titre">Electronics Arts</span>
     <br>
     <br>
     Electronic Arts Inc, situé à Redwood City en Californie, est un chef de file mondial dans le secteur du divertissement numérique interactif. EA développe et distribue des jeux, du contenu et des services en ligne pour les consoles connectées à Internet, les appareils mobiles et les ordinateurs. EA a plus de 450 millions de joueurs enregistrés dans le monde entier.
@@ -39,7 +39,7 @@
     <img class="image_editeur" src="./Images/EA-logo.png" alt="Logo de l'éditeur EpicGames">
   </a>
 </p>
-  <p class="a_propos"><b>Nintendo</b>
+  <p class="a_propos"><span class="sous_titre">Nintendo</span>
     <br>
     <br>
     Fondée il y a plus de 130 ans à Kyoto au Japon comme fabricant de jouets, ils ont fabriqué différentes consoles telles que : la NES avec comme jeu phare <i>Super Mario Bros 2</i>, la Game Boy avec sa licence phare <i>Pokemon</i>, la Wii avec le jeu phare de son lancement : <i>The Legend of Zelda - Twilight Princess</i>, la Nintendo DS avec <i>New Super Mario Bros</i>, la Wii U avec son jeu <i>Nintendo Land</i>, la Nintendo 3DS avec <i>Super Mario Maker</i> et la Nintendo Switch avec <i>The Legend of Zelda - Breath of the Wild</i>.
@@ -49,7 +49,7 @@
     <img class="image_editeur" src="./Images/nintendo-logo.png" alt="Logo de l'éditeur Nintendo">
   </a>
 </p>
-  <p class="a_propos"><b>Blizzard</b>
+  <p class="a_propos"><span class="sous_titre">Blizzard</span>
     <br>
     <br>
     Blizzard Entertainment est une société américaine de développement et d'édition de jeux vidéo siégeant à Irvine en Californie. La société a été fondée en 1991 par Allen Adham, Michael Morhaime et Frank Pearce. C'est le studio derrière <a href="https://eu.diablo3.com/fr-fr/">la série de jeu Diablo</a>, <a href="https://starcraft2.com/fr-fr/">Starcraft</a>, <a href="https://worldofwarcraft.com/fr-fr/">World Of Warcraft</a> et <a href="https://playoverwatch.com/fr-fr/">Overwatch</a>.
@@ -59,7 +59,7 @@
     <img class="image_editeur" src="./Images/logo-blizzard.png" alt="Logo de Blizzard Entertainment">
   </a>
 </p>
-  <p class="a_propos"><b>Bandai Namco</b>
+  <p class="a_propos"><span class="sous_titre">Bandai Namco</span>
     <br>
     <br>
     À l'origine simple entreprise dans le domaine du jeu, BANDAI NAMCO à élargi leur activité à d'autres formes de divertissement. BANDAI NAMCO Games est donc devenu BANDAI NAMCO Entertainment en 2015. Ils sont derrière la création de jeux tels que <i>Scarlet Nexus</i>, <i>Pac-Man 99</i> ou <i>CyberPunk 2077</i>.
@@ -69,7 +69,7 @@
     <img class="image_editeur" src="./Images/BANDAI_NAMCO_logo.png" alt="Logo de Namco Bandai Entertainment">
   </a>
 </p>
-  <p class="a_propos"><b>Mojang</b>
+  <p class="a_propos"><span class="sous_titre">Mojang</span>
     <br>
     <br>
     Mojang Studios est un studio suédois de jeux vidéo, fondé en mai 2009 sous la dénomination Mojang Specifications par Markus Persson alias « Notch », Carl Manneh et Jakob Porsér. Mojang Studios est principalement connu pour avoir créé le jeu <i>Minecraft</i>.
