--- a/Develloppeurs.html
+++ b/Develloppeurs.html
@@ -46,7 +46,7 @@
     <br>
     <br>
     <a href="https://www.nintendo.fr" target="_blank">
-    <img class="image_editeur" src="./Images/nintendo-logo.png" alt="Logo de l'éditeur Nintendo">
+    <img class="image_editeur" src="./Images/nintendo-Logo.png" alt="Logo de l'éditeur Nintendo">
   </a>
 </p>
   <p class="a_propos"><span class="sous_titre">Blizzard</span>
